log/build_2020-11-19_16-24-23/py_pubsub/stderr.log
  File "/home/iic/conversion/install/py_pubsub/lib/python3.6/site-packages/py_pubsub/publisher_member_function.py", line 18
    except CvBridgeError, e:
                        ^
SyntaxError: invalid syntax

